upload/VVU-Legacy-Dashboard/VVU-Dashboard/deploy/argocd/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vvu-dashboard
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: dashboard
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
